--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,31 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "loginpage/wsgi.py",
-        "use": "@vercel/python",
-        "config": {
-          "maxLambdaSize": "15mb",
-          "runtime": "python3.9"
-        }
-      },
-      {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "static"
-        }
+  "version": 2,
+  "builds": [
+    {
+      "src": "loginpage/wsgi.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
       }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "loginpage/wsgi.py"  
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "static"
       }
-    ],
-    "outputDirectory": "static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "loginpage/wsgi.py"
+    }
+  ],
+  "outputDirectory": "static"
 }
