--- a/vercel.json
+++ b/vercel.json
@@ -13,19 +13,18 @@
       "src": "build_files.sh",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "static"
+        "distDir": "staticfiles"
       }
     }
   ],
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "dest": "/staticfiles/$1"
     },
     {
       "src": "/(.*)",
       "dest": "loginpage/wsgi.py"
     }
-  ],
-  "outputDirectory": "static"
+  ]
 }
